fix thread safety and generall issues